--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.6.5",
     "leaflet": "^1.9.4",
     "leaflet-draw": "^1.0.4",
+    "leaflet-geosearch": "^4.2.0",
     "leaflet-image": "^0.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
