--- a/backend/package.json
+++ b/backend/package.json
@@ -21,7 +21,8 @@
     "gitignore": "^0.7.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.1",
-    "react-map-gl": "^8.0.4"
+    "react-map-gl": "^8.0.4",
+    "ws": "^8.18.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
